# traffic-power-repair-sim-v2

./: AGENTS.md  README.md  pyproject.toml  traffic_power_sim
docs/: 对应草图1的录音转文字.docx  对应草图2的录音转文字.docx
experiments/: enhanced_scenario.json  experiment_report.md  run_experiment.py
outputs/: strategy_alpha_metrics.csv  strategy_beta_metrics.csv  strategy_comparison_summary.csv  strategy_gamma_metrics.csv
scenarios/: demo.yaml
scenarios/minimal_case/: air_assets.csv  crews.csv  critical_sites.csv  cross_layer_map.csv  faults_events.csv  power_lines.csv  road_edges.csv  scenario.json
scenarios/minimal_case/results/: actions.json  recovery_curve.csv  strategy_summary.csv
scripts/: run_minimal_case.py
sim/: interface.py  mock_sim.py
src/traffic_power_sim/: __init__.py  bootstrap.py  cli.py
src/traffic_power_sim/air/: __init__.py  aerial_graph.py  constraints.py  contribution.py  mission_card.py
src/traffic_power_sim/config/: __init__.py  settings.py
src/traffic_power_sim/data/: __init__.py  loader.py  schema.py  validate.py
src/traffic_power_sim/dispatch/: __init__.py  baselines.py  rl_env.py
src/traffic_power_sim/graph/: __init__.py  algorithms.py  cross_layer.py  power_graph.py  road_graph.py
src/traffic_power_sim/metrics/: __init__.py  core.py  generate_outputs.py
src/traffic_power_sim/sim/: __init__.py  core_event_loop.py
tests/: test_cli_smoke.py  test_core_event_loop.py  test_rl_env_smoke.py
